--- a/space.html
+++ b/space.html
@@ -1,11 +1,11 @@
 <ul>
-  <li>Section - 'MM-'
+  <li>Section - 'MM-'</li>
     <ul>
       <li> Pseudocode: I want a month to match if the first M is equal to 0-1 and the last M is equal to 0-9 only when the first digit is 0, else the second digit should only equal 0-2 . We want to group the MM.</li>
         <ul>
           <li>The first M:</li>
           <ul>
-            <li>I want it to equal 0 or 1. The hints that I should be using an OR operator. M will be used to denote the M not yet solved for</li>
+            <li>I want it to equal 0 or 1. This hints I should be using an OR operator. M will be used to denote the M not yet solved for</li>
             <li>Code snippet: ([0]M|[1]M)</li>
           </ul>
           <li>The second M:</li>
@@ -27,25 +27,40 @@
     <ul>
       <li> Pseudocode: I want the day to match 0 through 3, but at 3 I want the second digit to be no more than 1. The second digit may not be equal to 0 if the first digit is also 0</li>
         <ul>
-          <li>The first M:</li>
+          <li>The first D:</li>
           <ul>
-            <li>I want it to equal 0 or 1. The hints that I should be using an OR operator. M will be used to denote the M not yet solved for</li>
-            <li>Code snippet: [0]M|[1]M</li>
+            <li>I want it to equal 0 or 1. This hints that I be using an OR operator. D will be used to denote the D not yet solved for</li>
+            <li>Code snippet: ([0]D|[1-3]D)</li>
           </ul>
-          <li>The second M:</li>
+          <li>The second D:</li>
           <ul>
-            <li>I want it to equal 1-9 if the month is a single number (09) OR 0-2 (to account for oct, nov, dec.)</li>
-            <li>Code snippet: M[1-9]|M[0-2]</li>
+            <li>I want it to equal 1-9 if the month is a single number (09) OR 0-9 if the month begins with 1-2 OR 0-1 if the month begins with 3</li>
+            <li>Code snippet: ([0][1-9]|[1-2][0-9]|[3][0-1])</li>
           </ul>
           <ul>
-            <li>Lets take care of whatever is being used to separate the dates, we will account for the standard MM.DD.YYYY, MM-DD-YYYY, and MM/DD/YYYY. We need for these separators to 1. not perform a function (such as ' . ' wildcard) and have them be 'literal'</li>
+            <li>Again, we'll cover our MM DD YYYY separator</li>
             <li>Code snippet: [\/\.\-]</li>
           </ul>
         </ul>
         <ul></ul>
       </li>
-      <li>Our combined code snippet is: [0][1-9]|[1][1-2][\/\.\-] </li>
+      <li>Our combined code snippet is: ([0][1-9]|[1-2][0-9]|[3][0-1])[\/\.\-] </li>
     </ul>
   </li>
-  <li>Final code snippet: </li>
+  <li>Section - 'YYYY'
+    <ul>
+      <li> Pseudocode: I want all digits in the year to be equal to 0-9. Accounting for all past and future dates using a 4 digit year</li>
+        <ul>
+          <li>All four Y's</li>
+          <ul>
+            <li>The range of YYYY can only be 0000-9999</li>
+            <li>Final code snippet: ([0-9][0-9][0-9][0-9])</li>
+          </ul>
+        </ul>
+    </ul>
+  </li>
+  <li>Final code snippet: Note: we'll add the flags for global identifier 'g' and multi-line match 'm'</li>
+  <ul>
+    <li>/([0][1-9]|[1][1-2])[\/\.\-]([0][1-9]|[1-2][0-9]|[3][0-1])[\/\.\-]([0-9][0-9][0-9][0-9])/gm</li>
+  </ul>
 </ul>
